<resources>
    <string name="app_name">FEET\'S</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_highfive">Highfive</string>
    <string name="title_ting">T\'ing!</string>
    <string name="title_feeters">Feeters</string>
    <string name="title_makanbuddy">Makan Buddy</string>
    <string name="tab1main">Challenges</string>
    <string name="tab2main">Feed</string>
    <string name="tab3main">Announcement</string>
    <string name="chat">Chat</string>
    <string name="noti">Notification</string>
    <string name="home">Home</string>
    <string name="highfive">Highfive</string>
    <string name="ting">T\'ing!</string>
    <string name="feeters">Feeters</string>
    <string name="makanbuddy">Makan Buddy</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="tab1campaign">3 in 30</string>
    <string name="tab2campaign">Leaderboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_3in30">Hello 3 in 30</string>
    <string name="hello_3in30_leaderboard">Hello 3 in 30 Leaderboard</string>
    <string name="endsin">Ends In</string>
    <string name="Feets_kick_start">Feet\'s Kick-start Campaign</string>
    <string name="your_chances_of">Your chances of winning a free trip to one of the 3 magical tropical beaches!</string>
    <string name="three_free_trips">3 free trips to 3 of the nicest beaches in South Asia, go to the 3 top winners og this campaign, competing in 30 days only!</string>
    <string name="first_place">1st Place</string>
    <string name="second_place">2nd Place</string>
    <string name="third_place">3rd Place</string>
    <string name="bali">Bali</string>
    <string name="krabi">Krabi</string>
    <string name="phuket">Phuket</string>
    <string name="indonesia">, Indonesia</string>
    <string name="thailand">, Thailand</string>
    <string name="campaign_3in30_rule">
        The rules are simple
    </string>
    <string name="campaign_3in30_tips">
        The fastest way to the top
    </string>
    <string name="campaign_3in30_tipsBullets">
        \nitem 1 \nitem 2 \nitem 3 \nitem 4
    </string>

    <string name="campaign_3in30_rulehtml">
        <b><big>The rules are simple</big></b>
        \n • Item one
        \n • Item two
        \n • Item three
    </string>

    <string name="campaign_3in30_tipshtml">
        <b><big>The fastest way to the top</big></b>
        \n • Item one
        \n • Item two
        \n • Item three
    </string>
    <string name="home_center_image">Home center image</string>
    <string name="seasonal_rank">7th</string>
    <string name="seasonal_score">1,950</string>
    <string name="home_center_image1">First image home view</string>
    <string name="home_center_image2">Second image home view</string>
    <string name="boost">x1.5</string>
    <string name="countdown_timer">00:00:00</string>

</resources>
