<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_main"
        android:id="@+id/toolbar"></include>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:layout_above="@id/navigation"
        android:layout_below="@id/tabs"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/ImageBeach">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/beach_chairs"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_gradientopacitybg_3in30" />
    </FrameLayout>

    <GridLayout
        android:id="@+id/beachGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/tabs"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:columnOrderPreserved="true"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:rowCount="4">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/rank"
            style="@style/WhiteTextScoreRank"/>

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="7th"
            style="@style/WhiteNumbersBoldWithOpaBlackBg"/>

        <ImageView
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_gravity="fill"
            android:scaleType="fitCenter"
            android:layout_columnWeight="15"
            android:layout_rowSpan="3"
            android:src="@drawable/center3in30" />

        <TextView
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/score"
            style="@style/WhiteTextScoreRank" />

        <TextView
            android:layout_column="2"
            android:layout_row="1"
            android:text="1,950"
            style="@style/WhiteNumbersBoldWithOpaBlackBg" />

        <TextView
            android:layout_column="2"
            android:layout_row="2"
            android:text="x1.5"
            android:drawablePadding="@dimen/drawablePadding"
            android:drawableLeft="@drawable/ic_announcement"
            style="@style/WhiteTextScoreRank" />

        <TextView
            android:id="@+id/event3in30"
            android:layout_column="1"
            android:layout_row="3"
            android:drawablePadding="@dimen/drawablePadding"
            android:drawableRight="@drawable/ic_announcement"
            android:text="20:20:20"
            android:layout_gravity="fill"
            android:layout_columnWeight="15"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/black_rounded_opacity"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp" />
    </GridLayout>

    <!--<TextView-->
        <!--android:id="@+id/countDown"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:text="countDown"-->
        <!--android:textSize="30dp"-->
        <!--android:layout_below="@id/beachGrid"-->
        <!--android:layout_above="@id/tabs"/>-->

    <View
        style="@style/shadowBottom"
        android:layout_below="@id/tabs"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_alignBottom="@+id/ImageBeach"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        app:tabSelectedTextColor="@color/white"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="3dp"
        app:tabTextAppearance="@style/TabText"
        app:tabMode="fixed"
        app:tabGravity="fill">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1main"
            android:icon="@drawable/ic_challenges"
            />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_feed"
            android:text="@string/tab2main" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_announcement"
            android:text="@string/tab3main" />

    </android.support.design.widget.TabLayout>

    <View
        style="@style/shadowTop"
        android:layout_above="@id/navigation"/>

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation"
        android:layout_alignParentBottom="true"
        android:forceHasOverlappingRendering="true"
        android:layout_gravity="center"
        />

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="0dp"-->
        <!--android:layout_marginStart="0dp"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:menu="@menu/navigation"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:forceHasOverlappingRendering="true"-->
        <!--android:layout_gravity="center"-->
        <!--/>-->


</RelativeLayout>